samples/_failures_safe/1761519437_d488fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bd94054.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_4bd94054.c:117:26: error: expected ‘)’ at end of input
  117 |                 if (val_a
      |                    ~     ^
      |                          )
./samples/SAFE/__tmp_4bd94054.c:117:17: error: expected declaration or statement at end of input
  117 |                 if (val_a
      |                 ^~
./samples/SAFE/__tmp_4bd94054.c:117:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4bd94054.c:117:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4bd94054.c:117:17: error: expected declaration or statement at end of input
